hphp/hack/test/typecheck/nonnull/option_is_not_subtype_of_nonnull3.php.exp
File "option_is_not_subtype_of_nonnull3.php", line 8, characters 12-23:
Invalid return type (Typing[4110])
File "option_is_not_subtype_of_nonnull3.php", line 7, characters 26-32:
This is a nonnull value
File "option_is_not_subtype_of_nonnull3.php", line 4, characters 11-12:
It is incompatible with a nullable type
