hphp/hack/test/typecheck/nonnull/option_is_not_subtype_of_nonnull3.php
<?hh // strict

class C<T> {
  private ?T $value;

  // This passes the type-checker if nonnull is replaced with mixed.
  public function get(): nonnull {
    return $this->value;
  }
}
